--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,8 @@
   </ion-header>
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
+    <ion-button (click)="presentAlert()">Click Me</ion-button>
+    <strong>Mudou</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
